--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,20 +8,17 @@ body{
   font-weight: 800;
 }
 
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
 .para {
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
+
+
+.para.small-para {
+  font-size: 14px;
+  font-weight: 800;
+}
+
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,14 +26,21 @@ body{
   font-size: 20px;
 }
 
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
-
-div.text {
+.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
 }
+
+#confirm-button {
+  background-color: green;
+  color: whitesmoke;
+  font-weight: bolder;
+}
+
+.text.child {
+  color: rgb(0, 0, 0);
+  font-size: 14px;
+  font-weight: 800;
+}
+ 
