--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -24,4 +28,87 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+  font-size: 14px;
+}
+
+a:hover {
+  text-decoration: solid;
+  color: gold;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  flex-shrink: 0;
+}
+
+
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  
+
+}
+
+
+.left-links li,
+.right-links li {
+  display: inline-block;
+  margin: 0 10px;
+  
+}
+
+.left-links {
+  margin-right: 10px;
+  
+}
+
+.right-links {
+  margin-left: auto;
+}
+
+.footer {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #eee;
+  padding: 0%;
+}
+
+.content {
+  text-align: center;
+}
+
+
+.buttons button{
+  padding: 10px;
+}
+
+.buttons  {
+  padding: 5px;
 }
